// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification/ino-tooltip ColorScheme smoke-test 1`] = `
<div id="root-inner">
  <div class="story-tooltip">
    <ino-button id="tooltip-target-color-scheme"
                class="hydrated"
    >
      <button class="button button__variant--filled"
              type="button"
      >
        <span class="button__label">
          Trigger Element
        </span>
      </button>
    </ino-button>
  </div>
</div>
`;

exports[`Notification/ino-tooltip Placement smoke-test 1`] = `
<div id="root-inner">
  <div class="story-tooltip">
    <ino-button id="tooltip-target-placement"
                class="hydrated"
    >
      <button class="button button__variant--filled"
              type="button"
      >
        <span class="button__label">
          Trigger Element
        </span>
      </button>
    </ino-button>
  </div>
</div>
`;

exports[`Notification/ino-tooltip Playground smoke-test 1`] = `
<div id="root-inner">
  <div class="story-tooltip">
    <ino-button id="tooltip-target">
      Trigger Element
    </ino-button>
    <ino-tooltip for="tooltip-target"
                 placement="auto"
                 trigger="mouseenter focus"
                 color-scheme="primary"
    >
      This is a tooltip
    </ino-tooltip>
  </div>
</div>
`;

exports[`Notification/ino-tooltip Trigger smoke-test 1`] = `
<div id="root-inner">
  <div class="story-tooltip">
    <ino-button id="tooltip-target-trigger"
                class="hydrated"
    >
      <button class="button button__variant--filled"
              type="button"
      >
        <span class="button__label">
          Trigger Element
        </span>
      </button>
    </ino-button>
  </div>
</div>
`;
